--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,9 +1,22 @@
-# https://pub.dev/packages/pedantic_mono
 include: package:pedantic_mono/analysis_options.yaml
 analyzer:
+  enable-experiment:
+    - non-nullable
+  errors:
+    # treat missing required parameters as a warning (not a hint)
+    missing_required_param: error
+    # treat missing returns as a warning (not a hint)
+    missing_return: warning
+    todo: warning
+    # Ignore analyzer hints for updating pubspecs when using Future or
+    # Stream and not importing dart:async
+    # Please see https://github.com/flutter/flutter/pull/24528 for details.
+    sdk_version_async_exported_from_core: ignore
   exclude:
     - lib/l10n/messages_*.dart
     - lib/**/*.g.dart
     - lib/**/*.freezed.dart
     - lib/generated_plugin_registrant.dart
+    - lib/**/*.gen.dart
     - ios/**
+    - android/**
