--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   freezed_annotation:
+  ftpconnect: ^1.0.0
   hooks_riverpod:
   intl: 0.17.0
+  path_provider: 2.0.0
 dev_dependencies:
   build_runner:
   flutter_test:
