--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,17 @@ dependencies:
     sdk: flutter
   freezed_annotation:
   ftpconnect: ^1.0.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
   hooks_riverpod:
   intl: 0.17.0
-  path_provider: 2.0.0
+  path_provider: 2.0.2
 dev_dependencies:
   build_runner:
   flutter_test:
     sdk: flutter
   freezed:
+  hive_generator: ^1.1.1
   pedantic_mono:
 flutter:
   generate: true
