--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,10 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^4.0.0
+  ext_storage:
+    git:
+      url: git://github.com/lavahasif/ext_storage_ups.git
   flutter:
     sdk: flutter
   flutter_hooks:
@@ -17,6 +21,7 @@ dependencies:
   hooks_riverpod:
   intl: 0.17.0
   path_provider: 2.0.2
+  permission_handler: ^8.1.6
 dev_dependencies:
   build_runner:
   flutter_test:
