--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: 0.17.0
   path_provider: 2.0.2
   permission_handler: ^8.1.6
+  wifi_info_flutter: ^2.0.2
 dev_dependencies:
   build_runner:
   flutter_test:
