--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   path_provider: 2.0.2
   permission_handler: ^8.1.6
   wifi_info_flutter: ^2.0.2
+  flutter_mailer: ^2.0.0
+  flutter_archive: ^4.1.0
 dev_dependencies:
   build_runner:
   flutter_test:
